--- a/README
+++ b/README
@@ -12,3 +12,6 @@ Dashboards are present in the DB, exports of those dashboards have also been inc
 The graf-db container can be found on the docker hub [here](https://hub.docker.com/r/infinityworks/graf-db/)
 The catalog entry is in the community catalog, available [here](https://github.com/rancher/community-catalog)
 Additional information can be found on the [guide](https://github.com/infinityworksltd/Guide_Rancher_Monitoring)
+
+## Metadata
+[![](https://images.microbadger.com/badges/image/infinityworks/graf-db.svg)](http://microbadger.com/images/infinityworks/graf-db "Get your own image badge on microbadger.com") [![](https://images.microbadger.com/badges/version/infinityworks/graf-db.svg)](http://microbadger.com/images/infinityworks/graf-db "Get your own version badge on microbadger.com")
